objects/APTS_ABB_Integration_Master_Params__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Integration_Repository__c</fullName>
        <label>Integration Repository</label>
        <referenceTo>APTS_ABB_Integration_Master__c</referenceTo>
        <relationshipLabel>Integration Repository Params</relationshipLabel>
        <relationshipName>Integration_Repository_Params</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Param_Type__c</fullName>
        <label>Param Type</label>
        <picklist>
            <picklistValues>
                <fullName>URL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Header</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Param_Value__c</fullName>
        <label>Param Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Integration Repository Param</label>
    <nameField>
        <label>Integration Repository Param Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Repository Params</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>